SF-Custom-Objects/salesforce_ant_46.0/sample/codepkg/objects/CSP_Contract_Year__c.object
<CustomObject>
    <description>Tracks the different contract years for the Cloud Service Provider Contracts.</description>
    <fields>
        <fullName>Awarded_Amount__c</fullName>
        <description>The awarded amount for the Cloud Service Provider contract for the contract year.</description>
        <label>Awarded Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funded_Amount__c</fullName>
        <description>The funded amount for the Cloud Service Provider&apos;s contract year.</description>
        <label>Funded Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>CSP Contract Year</label>
    <nameField>
        <label>CSP Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSP Contract Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>